<resources>
    <string name="app_name">SaveWater</string>

    <!-- menu -->
    <string name="menu_home">Home</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_settings">Settings</string>

    <!-- home -->
    <string name="today_label">Today</string>
    <string name="fab_content_description">Add button</string>
    <string name="water_consumption_label">liters</string>
    <string name="liters_abbr">%1$d L</string>
    <string name="share_string">Share</string>

    <!-- diary-->
    <string name="swipe_advice">Swipe left to delete</string>

    <!-- authentication -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="change_password">Change password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="registration_hint">Create an account</string>
    <string name="logo_image_content_description">Save water logo</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="login_hint">Already have an account? Login here</string>
    <string name="action_sign_out">Sign out</string>

    <!-- utility -->
    <string name="utility_title">Title</string>
    <string name="utility_description">Description</string>
    <string name="utility_water_consumption">Water consumption</string>
    <string name="utility_title_hint">Title</string>
    <string name="utility_description_hint">Description</string>
    <string name="action_back">Back</string>
    <string name="action_add">Add</string>

    <!-- Sync Preferences -->
    <string name="profile">Profile</string>
    <string name="edit_account">Edit account</string>
    <string name="appearance">Appearance</string>
    <string name="dark_theme">Dark theme</string>
    <string name="about">About</string>
    <string name="app_version">Version</string>
    <string name="version">1.0</string>
    <string name="about_us">About us</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_surname">Edit surname</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_password">Edit password</string>
    <string name="edit_target_water_consumption">Challenge yourself! Choose your target</string>
    <string name="prompt_water_target">Your target</string>
    <string name="success_reset_password">Sent email to %1$s</string>


    <!-- delete dialog -->
    <string name="confirm_delete">Are you sure you want to delete this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    </resources>