<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile">

        <Preference
            app:key="edit_account"
            app:title="@string/edit_account" />
        <EditTextPreference
            app:dialogTitle="@string/edit_target_water_consumption"
            app:key="edit_target"
            app:title="@string/prompt_water_target" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <SwitchPreferenceCompat
            app:key="enable_dark_theme"
            app:title="@string/dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            android:summary="@string/version"
            app:key="version"
            app:title="@string/app_version"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:persistent="true"
            app:key="about_us"
            app:title="@string/about_us"
            app:useSimpleSummaryProvider="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/riccardozulla/savewater" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            app:key="sign_out"
            app:title="@string/sign_out" />
    </PreferenceCategory>

</PreferenceScreen>