<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Account Info">

        <EditTextPreference
            app:dialogTitle="@string/edit_name"
            app:key="edit_name"
            app:title="@string/prompt_name" />
        <EditTextPreference
            app:dialogTitle="@string/edit_surname"
            app:key="edit_surname"
            app:title="@string/prompt_surname" />
        <EditTextPreference
            app:dialogTitle="@string/edit_email"
            app:key="edit_email"
            app:title="@string/prompt_email" />
        <Preference
            app:key="edit_password"
            app:title="@string/change_password" />
        <Preference
            app:key="delete_account"
            app:title="@string/delete_account" />

    </PreferenceCategory>
</PreferenceScreen>